--- a/style/home.css
+++ b/style/home.css
@@ -2,17 +2,29 @@
     margin: 0;
     padding: 0;
 }
-body {
-    width: 100%;
+body, html {
+    height: 100%;
 }
 
 
 .background-picture {
-
-    background: url("../src/softwareEngineering.jpg");
-    background-attachment: fixed;
+    background-image: url("../src/laptop.webp");
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
     background-size: cover;
-    
-    
-    
+}
+
+.header {
+    height: 300px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.trademark {
+    margin-left: 200px;
+}
+
+.navigation-item {
+    text-decoration: none;
 }
