--- a/style/home.css
+++ b/style/home.css
@@ -3,28 +3,147 @@
     padding: 0;
 }
 body, html {
-    height: 100%;
+    height: 100vh;
+}
+.header {
+    height: 380px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+.header:hover {
+    background-color: rgba(249, 44, 139, 1);
+}
+.header:hover .trademark {
+    color: white;
+}
+.header:hover a {
+    color: white;
+}
+.header:hover .contact{
+    border-color: black;
+}
+.header:hover .capital{
+    color: rgba(47, 45, 68, 1);
+}
+.trademark {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.icon-gesamt {
+    padding: 0;
+    display: flex;
+    align-items: center;
+    margin-top: 1em;
+}
+.icon {
+    font-size: 3.5em;
+    padding: 0;
+}
+.name {
+    font-size: 2.2em;
+}
+.capital {
+    font-size: 1.6em;
+    font-weight: bold;
+    color: rgb(67, 64, 95);
+}
+.navigation {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    margin-top: 1em;
 }
 
-
+.navigation-bar {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.navigation-item {
+    text-align: center;
+    text-decoration: none;
+    list-style: none;
+    font-size: 1.5em;
+    color:black;
+    margin-bottom: 0.5em;
+}
+.navigation-item:hover a {
+    color: black;
+}
+.navigation-item a {
+    text-decoration: none;
+    color: black;
+}
+.current-page {
+    border-bottom: 2px solid black;
+}
+.contact {
+    padding: 0.25em 0.4em 0.25em 0.4em;
+    font-size: 1.6em;
+    border-width: 2px;
+    border-color: rgba(249, 44, 139, 1);
+    border-style: solid;
+    border-radius: 50px;
+}
+.contact:hover {
+    color: black;
+    background: rgba(47, 45, 68, 1);
+}
+.contact a {
+        text-decoration: none;
+        color: rgba(249, 44, 139, 1);
+}
 .background-picture {
     background-image: url("../src/laptop.webp");
-    height: 100%;
+    height: calc(100% - 380px);;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    z-index: -10;
 }
-
-.header {
-    height: 150px;
-    display: flex;
-    justify-content: space-between;
+.pers-description {
+    position: relative;
+    width: 50%;
+    top: 40%;
+    left: 40px;
+    color: white;
 }
-
-.trademark {
-    margin-left: 200px;
+.h1-description {
+    margin-bottom: 50px;
+    font-size: 3rem;
 }
-
-.navigation-item {
-    text-decoration: none;
+.p-description {
+    font-size: 1.2rem;
+}
+.appearing {
+    color: rgba(25, 245, 148, 1);
+    animation: typewriter 5s steps(7) infinite, blinking-cursor 0.8s infinite;
+    animation-fill-mode: forwards;
+}
+.portfolio-button button {
+    margin-top: 40px;
+    padding: 10px 40px 10px 40px;
+    background-color: rgba(249, 44, 139, 1);
+    border-radius: 30px;
+    border-color: rgba(249, 44, 139, 1);
+    font-size: 1.3rem;
+    cursor: pointer;
+}
+.portfolio-button button:hover {
+    transform: translateY(-10px);
+    border-color: black;
+}
+.about-me {
+    height: 500px;
+}
+.layer {
+    background: rgba(33, 32, 69, 0.7);
+    z-index: -9;
+    width: 100%;
+    height: 100%;
 }
